--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
-        <h2>Freshman in Greenville, South Carolina</h2>
+        <h1>Eylan Martinez</h1>
+        <h2>Senior in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a senior multimedia journalism major, who loves discovering beauty in the mundane moments, and finding little stories 
+         in unexpected places, that point to the bigger Story. I love the content creation field, and I am excited to explore it further 
+         in the next couple of years</p>
          <p>
-            I am part of Gateway Baptist Church. My favorite website is  
+            I am originally from the DR but recently moved to Pennsylvania. There I attend a small church called Grace Fellowship Church. My favorite website is  
             <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            <a href="mailto:emart201@bju.edu">here</a>.
          </p> 
          <p>
             I enjoy listening to podcasts and having deep conversations.
