--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: LightCoral;
     font-family: Verdana;
 }  
 #content {
@@ -37,18 +37,19 @@ h3 {
          in unexpected places, that point to the bigger Story. I love the content creation field, and I am excited to explore it further 
          in the next couple of years</p>
          <p>
-            I am originally from the DR but recently moved to Pennsylvania. There I attend a small church called Grace Fellowship Church. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
+            I am originally from the DR but recently moved to Pennsylvania. There I attend a small church called Grace Fellowship Church. My church website is 
+            <a href="https://gfchazleton.org/">here</a>, and you can email me  
             <a href="mailto:emart201@bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy going on walks, journaling, and reading a good biography or historical fiction book. 
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Multimedia Journalism, B.S
+        French Minor<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
+        <img src="https://brand.bju.edu/files/2020/04/BJU-horiz-logo-color.png" />
     </div>
 </body>
 </html>
