--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h3 {
         French Minor<br />
         Bob Jones University<br />
         Example image:
-        <img src="https://brand.bju.edu/files/2017/09/tagline-thumbnail.png" /> 
+        <img src="https://brand.bju.edu/files/2013/07/bruins-logo1.gif" /> 
     </div>
 </body>
 </html>
