--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ h3 {
         Multimedia Journalism, B.S
         French Minor<br />
         Bob Jones University<br />
-        Example image:
+        Image from: https://brand.bju.edu/brand-guidelines/university-symbols/
         <img src="https://brand.bju.edu/files/2013/07/bruins-logo1.gif" /> 
     </div>
 </body>
