--- a/index.html
+++ b/index.html
@@ -1,55 +1,83 @@
-<html>
+<!DOCTYPE html>
+<html data-bs-theme="light" lang="en">
+
 <head>
-<style>
-body {
-    background: LightCoral;
-    font-family: Verdana;
-}  
-#content {
-    background: lightyellow;
-    min-width: 200px;
-    max-width: 500px;
-    padding: 50px;
-    margin: auto;
-    margin-top: -50px;
-    line-height: 150%;
-}
-h1 {
-    letter-spacing: 2px;
-    font-size: 16px;
-    text-align: center;
-}
-h2 {
-    font-size: 14px;
-    text-align: center;
-}
-h3 {
-    font-size: 12px;
-}
-</style>
-</head>    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Home - Brand</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
+</head>
+
 <body>
-    <div id="content">
-        <h1>Eylan Martinez</h1>
-        <h2>Senior in Greenville, South Carolina</h2>
-        
-         <p>I am a senior multimedia journalism major, who loves discovering beauty in the mundane moments, and finding little stories 
-         in unexpected places, that point to the bigger Story. I love the content creation field, and I am excited to explore it further 
-         in the next couple of years</p>
-         <p>
-            I am originally from the DR but recently moved to Pennsylvania. There I attend a small church called Grace Fellowship Church. My church website is 
-            <a href="https://gfchazleton.org/">here</a>, and you can email me  
-            <a href="mailto:emart201@bju.edu">here</a>.
-         </p> 
-         <p>
-            I enjoy going on walks, journaling, and reading a good biography or historical fiction book. 
-         </p>
-        <h3>EDUCATION</h3>
-        Multimedia Journalism, B.S
-        French Minor<br />
-        Bob Jones University<br />
-        Image from: https://brand.bju.edu/brand-guidelines/university-symbols/
-        <img src="https://brand.bju.edu/files/2013/07/bruins-logo1.gif" /> 
-    </div>
+    <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-custom navbar-dark">
+        <div class="container"><button class="navbar-toggler" data-bs-toggle="collapse"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+    </nav>
+    <header class="text-center text-white masthead">
+        <div class="masthead-content">
+            <div class="container fw-normal fst-italic">
+                <h1 class="masthead-heading mb-0">The Story</h1>
+                <h2 class="masthead-subheading mb-0">of my stories</h2>
+            </div>
+        </div>
+        <div class="bg-circle-1 bg-circle"></div>
+        <div class="bg-circle-2 bg-circle"></div>
+        <div class="bg-circle-3 bg-circle"></div>
+        <div class="bg-circle-4 bg-circle"></div>
+    </header>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5 mt-0 mb-0"><img class="rounded-circle img-fluid" alt="A nostalgic arrangement of books, letters, and dried flowers on fabric." src="assets/img/pexels-photo-9700829.jpeg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5 mt-0 pt-0 mb-0 pb-4">
+                        <h2 class="display-4 pt-0 pb-0">Welcome!</h2>
+                        <p>I hope you come to stay refreshed! Here you'll see a curated selection of my favorite books, poems, and reflective blogs from time to time.&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5 mt-0"><img class="rounded-circle img-fluid pt-0" alt="A serene morning scene with hands holding a book, a coffee mug, and glasses on a marble table." src="assets/img/pexels-photo-31645661.jpeg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-2">
+                    <div class="p-5 mt-0 pt-4">
+                        <h2 class="display-4">About me</h2>
+                        <p>I am passionate about discovering stories, and beauty in the little moments, and sharing them with others.&nbsp; Even as seasons change, there's so much to explore : )&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 order-lg-2" style="background: var(--bs-secondary);">
+                    <div class="p-5"><img class="rounded-circle img-fluid" alt="A neatly arranged workspace featuring notebooks and a digital tablet on a wooden desk." src="assets/img/pexels-photo-5668483.jpeg"></div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <div class="p-5">
+                        <h2 class="display-4">Reach out!</h2>
+                        <p>I'd love to hear your stories as well! If you'd like to connect please email me at eylanmartinez0125@gmail.com or follow me on social media.&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© Brand 2025</p>
+        </div>
+    </footer>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </html>
